# semseg-bids19

./: Jenkinsfile  LICENSE  README.md  job_bmetal.sh  job_udocker.sh  requirements-dev.txt  requirements.txt  setup.cfg
2dsemseg/: data_io.py
2dsemseg/dataset/: make_dataset.py
2dsemseg/features/: build_features.py
2dsemseg/models/: model.py
2dsemseg/visualization/: visualize.py
docker/: Dockerfile.dev  Dockerfile.gpu  Dockerfile.tests
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-2dsemseg_start.py2.ipynb
semseg/: train_resnet50_fcn.py
