[metadata]
name = 2dsemseg
summary = 2D semantic segmentation (Vaihingen dataset)
description-file =
    README.md
author = G. Cavallaro (FZJ), M. Goetz (KIT), V. Kozlov (KIT)
author-email = valentin.kozlov@kit.edu
version = 0.9.0
license = MIT
home-page = http://github.com/vykozlov/2dsemseg
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[files]
packages =
    2dsemseg

[entry_points]

deepaas.model = 
    2dsemseg = 2dsemseg.models.model

